--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -7,10 +7,30 @@ body {
 .image_container {
   position: relative;
   width: 100%;
-
+  .poster_bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    aspect-ratio: 100/148;
+    background-color: variables.$posterLightBrown;
+    z-index: -2;
+  }
+  .back_gallery {
+    position: absolute;
+    top: 20%;
+    left: 20%;
+    width: 60%;
+    z-index: -1; // 背景画像を背面に配置
+  }
+  .poster_wrapper {
+    opacity: 0.8; // 透過度を設定
+    position: relative;
+    width: 100%;
+    aspect-ratio: 100/148;
+  }
   .poster_main {
     width: 100%;
-    opacity: 0.4;
   }
 
   .prev_button,
