--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -1,7 +1,9 @@
 @use "../styles/variables";
-
+@import url("https://fonts.googleapis.com/css2?family=M+PLUS+1p&display=swap");
 body {
   background-color: variables.$posterBrown;
+  font-family: "M PLUS 1p", sans-serif;
+  font-size: 16px;
 }
 
 .image_container {
@@ -18,9 +20,9 @@ body {
   }
   .back_gallery {
     position: absolute;
-    top: 20%;
-    left: 20%;
-    width: 60%;
+    top: 21%;
+    left: 23%;
+    width: 55%;
     z-index: -1; // 背景画像を背面に配置
   }
   .poster_wrapper {
@@ -70,6 +72,37 @@ body {
     top: 84%;
     width: 13%;
     right: 16%;
+  }
+  .design_code,
+  .design_number,
+  .design_category {
+    position: absolute;
+    width: 13%;
+  }
+  .design_code {
+    top: 30%;
+    left: 11%;
+    width: 10%;
+  }
+  .design_category {
+    top: 55%;
+    left: 11%;
+    width: 15%;
+  }
+  .design_number {
+    right: 13%;
+    top: 30%;
+  }
+}
+.sokatsu_overview {
+  h1 {
+    margin: 0 auto;
+  }
+  h3 {
+    font-size: 23px;
+  }
+  p {
+    font-size: 18px;
   }
 }
 //   // ビューポートの高さが800px以上の場合
