--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,6 @@
 //グローバルで使える変数
 $posterBrown: rgb(191, 161, 119);
 $posterLightBrown: rgb(211, 204, 188);
+$posterTextLightBrown: rgb(226, 219, 202);
 $posterBlue: rgb(72, 106, 131);
+$posterLightBlue: rgb(142, 160, 173);
